# bc-license-checker

./: .gitignore  Cargo.toml  README.md
src/: main.rs
