[package]
name = "bc-license-checker"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
clap = { version = "4.0.29", features = ["derive"] }
dialoguer = "0.10.2"
encoding_rs = "0.8.31"
encoding_rs_io = "0.1.7"
